fix some mobile misalignments

--- a/infinitv.css
+++ b/infinitv.css
@@ -764,7 +764,9 @@
 
 /* Space for glow animation */
 .layout-desktop .overflowBackdropCard .cardScalable,
-.layout-desktop .overflowPortraitCard .cardScalable {
+.layout-desktop .overflowPortraitCard .cardScalable,
+.layout-mobile .overflowBackdropCard .cardScalable,
+.layout-mobile .overflowPortraitCard .cardScalable {
   margin-left: .5em;
 }
 
@@ -1365,8 +1367,8 @@ p.itemGenres {
 }
 
 /* Section Scroller (Mobile) */
-.layout-mobile:not(.sectionTitleContainer-cards) > .sectionTitle-cards {
-  padding-top:0em;
+.layout-mobile :not(.sectionTitleContainer-cards) > .sectionTitle-cards {
+  padding-top: 0em;
 }
 .layout-mobile .sectionTitleTextButton > .material-icons {
   padding-top: .2em;
